[tool.poetry]
name = "chainbase"
version = "0.0.2a29"
description = "Chainbase is a library for instantly creating langchain-based APIs with autoconfiguration for proprietary data."
authors = ["Eric Robinson"]
license = "MIT"
readme = "README.md"
packages = [{include = "chainbase"}]

[tool.poetry.dependencies]
python = "~3.11"
chainbase-lib = {version = "0.0.2a29", source = "testpypi"}

[[tool.poetry.source]]
name = "testpypi"
url = "https://test.pypi.org/simple/"
priority = "explicit"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
